syntax = "proto3";

package user_int;

option go_package = "/intuser";

import "google/protobuf/empty.proto";

service User {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);

  rpc CreateGroup(GroupRequest) returns (CreateGroupResponse);
  rpc DeleteGroup(GroupRequest) returns (google.protobuf.Empty);

  rpc CreateCourse(CourseRequest) returns (CreateCourseResponse);
  rpc DeleteCourse(CourseRequest) returns (google.protobuf.Empty);

  rpc AttachStudentToCourse(AttachStudentToCourseRequest) returns (google.protobuf.Empty);
  rpc DetachStudentToCourse(DetachStudentToCourseRequest) returns (google.protobuf.Empty);

  rpc AttachGroupToCourse(AttachGroupCourseRequest) returns (google.protobuf.Empty);
  rpc DetachGroupFromCourse(DetachGroupCourseRequest) returns (google.protobuf.Empty);
  
  rpc AttachTeacherToCourse(AttachTeacherCourseRequest) returns (google.protobuf.Empty);
  rpc DetachTeacherToCourse(DetachTeacherCourseRequest) returns (google.protobuf.Empty);

  rpc GetGroupsData(google.protobuf.Empty) returns (GroupsDataResponse);
  rpc GetCoursesData(google.protobuf.Empty) returns (CoursesDataResponse);
}

message AttachStudentToCourseRequest {
  string student_id = 1;
  string group_id = 2;
}

message DetachStudentToCourseRequest {
  string student_id = 1;
  string group_id = 2;
}

message CreateUserRequest {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string role = 5;
}

message DeleteUserRequest {
  string email = 1;
}

message GroupRequest {
  string name = 1;
}

message CreateGroupResponse {
  string ID = 1;
}

message CourseRequest {
  string name = 1;
}

message CreateCourseResponse {
  string ID = 1;
}

message AttachGroupCourseRequest {
  string GroupID = 1;
  string CourseID = 2;
}

message DetachGroupCourseRequest {
  string GroupID = 1;
}

message AttachTeacherCourseRequest {
  string TeacherID = 1;
  string CourseID = 2;
}

message DetachTeacherCourseRequest {
  string TeacherID = 1;
}

message GroupData {
  string GroupName = 1;
  string GroupID = 2;
}

message GroupsDataResponse {
  repeated GroupData GroupsData = 1;
}

message CourseData {
  string CourseName = 1;
  string CourseID = 2;
}

message CoursesDataResponse {
  repeated CourseData CoursesData = 1;
}

message UserDataRequest {
  string Email = 1;
}